tests/init/neg/inlined-method.check
-- Error: tests/init/neg/inlined-method.scala:8:45 ---------------------------------------------------------------------
8 |    scala.runtime.Scala3RunTime.assertFailed(message) // error
  |                                             ^^^^^^^
  |                          Cannot prove the argument is fully initialized. Calling trace:
  |                          -> Assertion.failAssert(this)	[ inlined-method.scala:2 ]
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          -> scala.runtime.Scala3RunTime.assertFailed(message) // error	[ inlined-method.scala:8 ]
  |                                                                      ^^^^^^^
